SDK_old/SampleCG 1.2.0.0/inc/ThermalCamSDK.h


typedef enum
{
	_IRF_CELSIUS	= 0,				
	_IRF_FAHRENHEIT,					
	_IRF_KELVIN							
}	IRF_TEMP_MODE_T;
typedef enum
{
	_IRF_AUTO	= 0,					
	_IRF_MANUAL							
}	IRF_AUTOMATIC_TYPE_T;
typedef enum
{
	_IRF_LOW_RANGE		= 0,			
	_IRF_MIDDLE_RANGE,					
}	IRF_DYNAMIC_RANGE_T;
typedef enum
{
	_IRF_MIN_MAX			= 0,		
	_IRF_BRIGHTNESS_RATE,				
	_IRF_SD_RATE,						
	_IRF_AUTO_BRIGHT,					
	_IRF_ENHANCE_HIST					
}	IRF_AUTO_RANGE_INPUT_METHOD_T;
typedef enum
{
	_IRF_LINEAR				= 0,		
	_IRF_NON_LINEAR,					
	_IRF_TPE,							
	_IRF_APE,							
	_IRF_SAPE							
}	IRF_AUTO_RANGE_OUTPUT_METHOD_T;
typedef enum
{
	_IRF_FILTER_NONE		= 0,
	_IRF_MEDIAN,
	_IRF_SOFTEN_SLIGHTLY,
	_IRF_SOFTEN_STRONG,
	_IRF_SHARPENING_SLIGHTLY,
	_IRF_SHARPENING_STRONG,
	_IRF_BOXBLUR,
	_IRF_FAST_GAUSSIAN,
	_IRF_FAST_STACK_BLUR,
	_IRF_BI_LATERAL
}	IRF_IMAGE_FILTER_T;
typedef enum
{
	_IRF_NONE				= -1,			
	_IRF_ACK				= 0,			
	_IRF_NAK				= 1,			
	_IRF_ALIVE				= 2,			
	_IRF_STREAM_ON			= 3,			
	_IRF_STREAM_OFF			= 4,			
	_IRF_STREAM_DATA		= 5,			
	_IRF_REQ_CAM_DATA		= 7,			
	_IRF_CAM_DATA			= 8,			
	_IRF_SET_CAM_DATA		= 10,			
	_IRF_SET_USER_PALETTE	= 11,			
	_IRF_REQ_SYS_INFO		= 12,			
	_IRF_SYS_INFO			= 13,			
	_IRF_SPOT_STREAM_ON		= 14,			
	_IRF_SPOT_STREAM_OFF	= 15,			
	_IRF_SPOT_STREAM_DATA	= 16,			
	_IRF_REQ_TEMP_TABLE		= 19,			
}	IRF_MESSAGE_TYPE_T;
typedef enum
{
	YELLOW_COLOR_MAP		= 0,
	RAINBOW_COLOR_MAP,
	RAIN900_COLOR_MAP,
	RAIN10_COLOR_MAP,	
	MIDGREY_COLOR_MAP,
	MIDGREEN_COLOR_MAP,
	MEDICAL_COLOR_MAP,
	IRON10_COLOR_MAP,
	IRON_COLOR_MAP,
	GREYRED_COLOR_MAP,
	GREY10_COLOR_MAP,
	GREY_COLOR_MAP,
	GLOWBOW_COLOR_MAP
}	IRF_PALETTE_TYPE_T;
typedef enum
{
	GREY		= 0,
	RAINBOW,
	IRON,
	GREYRED,
	GLOWBOW,
	YELLOW,
	MIDGREY,
	MIDGREEN
}	IRF_CAM_PALETTE_TYPE_T;
typedef enum
{
	CX320	= 0,
	CX640,
	CG320,
	CG640
}	IRF_CAM_MODEL_TYPE_T;
typedef struct
{	
	unsigned short			xSize;					
	unsigned short			ySize;					
}	IRF_IMAGE_INFO_T;
typedef struct
{
	float					emissivity;				
	float					atmTemp;				
	float					atmTrans;				
	int						zero_offset;			
}	IRF_TEMP_CORRECTION_PAR_T;
typedef struct  
{
	BYTE					ver;					
	IRF_IMAGE_INFO_T				image_info;			
	IRF_TEMP_CORRECTION_PAR_T		temp_correction;	
}	IRF_IR_FILE_HEADER_T;
typedef struct 
{
	IRF_AUTOMATIC_TYPE_T			autoScale;		
	IRF_AUTO_RANGE_INPUT_METHOD_T	inputMethod;	
	IRF_AUTO_RANGE_OUTPUT_METHOD_T	outputMethod;	
	float					B_Rate;					
	float					SD_Rate;				
	unsigned char			intercept;				
	float					gamma;					
	unsigned int			plateau;				
	float					epsilon;				
	float					psi;					
	float					prevPalteau;			
}	IRF_AUTO_RANGE_METHOD_T;
typedef struct
{
	float					min;					
	float					max;					
	float					avg;					
	float					std;					
}	IRF_NUMERIC_INFO_T;
typedef struct {
	BYTE					Info[7];				
	BYTE					Index;					
	BYTE					Data[1024];				
	unsigned int			pngLength;				
	BYTE					pngData[8192];			
}	IRF_SET_USER_PALETTE;
typedef struct  __alarm_config__
{  
	uint8_t					f_enable;				
    uint8_t					output_mask;			
    uint8_t					cond;					
    uint8_t					reserved;				
    int16_t					temp;					
    uint16_t				delay;					
}   ALRMCFG, * ALRMCFG_PTR;
typedef struct strSAVEDATA
{
	union {
		struct
		{
			unsigned int		crc;				
			unsigned char		ver;				
			unsigned char		sensor;				
			unsigned char		tv;					
			unsigned char		temp_mode;			
			unsigned char		id;					
			unsigned char		baudrate;			
			short				level;				
			unsigned short		span;				
			unsigned char		agc;				
			unsigned char		invert;				
			unsigned char		mirror;				
			unsigned char		flip;				
			unsigned char		colorbar;			
			unsigned char		showinfo;			
			unsigned char		indicator;			
			unsigned char		unit;				
			unsigned char		dhcp;				
			unsigned char		color;				
			unsigned char		alpha;				
			unsigned char		zoom;				
			unsigned char		sharp;				
			unsigned char		noise;				
			unsigned short		nuc;				
			unsigned char		econt;				
			unsigned int		ipaddr;				
			unsigned int		netmask;			
			unsigned int		gateway;			
			unsigned int		dns;				
			unsigned char		alarm1_func;		
			unsigned char 		alarm1_cond;		
			short				alarm1_value;		
			unsigned char		alarm2_func;		
			unsigned char		alarm2_cond;		
			short				alarm2_value;		
			unsigned char		down_filter;		
			unsigned char		show_center;		
			unsigned char		show_spot;			
			unsigned char		show_correction;	
			unsigned char		show_isotherm;		
			unsigned char		alarm1_duration;	
			unsigned char		alarm2_duration;	
			struct {
				unsigned char flag;					
				unsigned short x1;					
				unsigned short y1;					
				unsigned short x2;					
				unsigned short y2;					
			}	roi[2];								
			uint8_t     f_disp_icon;				
            uint8_t     brightness;					
            uint8_t     contrast;					
            uint8_t     f_edge_enhance;				
            uint8_t     nuc_mode;					
            uint8_t     nuc_time;					
            uint16_t    nuc_thres;					
            uint16_t    agc_man_max;				
            uint16_t    agc_man_min;				
            uint8_t     srl_protocol;				
            uint16_t    scn0_l_margin;				
            uint16_t    scn0_r_margin;				
            uint16_t    scn0_t_margin;				
            uint16_t    scn0_b_margin;				
            uint16_t    scn1_l_margin;				
            uint16_t    scn1_r_margin;				
            uint16_t    scn1_t_margin;				
            uint16_t    scn1_b_margin;				
            uint8_t     hdmi_mode;					
            uint8_t     alarm1_type;				
            uint8_t     alarm1_mode;				
            uint8_t     alarm1_dura;				
			uint8_t     alarm1_remote_ctrl;			
            uint8_t     alarm2_type;				
            uint8_t     alarm2_mode;				
            uint8_t     alarm2_dura;				
			uint8_t     alarm2_remote_ctrl;			
			int16_t		zero_offset;				
			uint16_t	measure_distance;			
			uint8_t		nr1_strength;				
			uint8_t		nr2_strength;				
			uint8_t		ee_strength;				
		};
		unsigned char		reserved1[128];
	};
	union {
		struct
		{
			unsigned char		limit9;				
			unsigned char		enable_high;		
			unsigned char		correction;			
			unsigned char		emissivity;			
			unsigned char		transmission;		
			short				atmosphere;			
			union {
				struct {
					unsigned char		enable;
					unsigned short		x;
					unsigned short		y;
					unsigned char		local;
					unsigned char		em;
					unsigned char		tr;
					short	at;
					unsigned char		reserved[6];
				} spot[10];							
				struct  {
					uint8_t		mode;				
					uint8_t     temp_type;			
					uint16_t	x;					
					uint16_t	y;					
					uint16_t	w;					
					uint16_t	h;					
					uint8_t		f_corr;				
					uint8_t		em;					
					uint8_t		tr;					
					int16_t		at;					
					uint8_t     reserved;
				}   cg_roi[10];						
			};
			union {
				struct {
					unsigned char		enable;
					unsigned int		seed_color;
					short				top;
					short				bottom;
					unsigned char		reserved[3];
				} iso[3];							
				struct {
                    uint8_t		mode_mask;			
                    uint8_t		tran_mask;			
                    int16_t     max_temp;			
                    int16_t     min_temp;			
                    uint32_t	above_color;		
                    uint32_t	below_color;		
                    uint32_t	between_color;		
                } cg_iso[2];						
			};
			uint8_t         hdmi_list[8];			
			uint16_t		support_temp_mode;		
			uint8_t			f_support_motor_focus;	
			uint8_t			f_support_motor_zoom;	
			uint16_t		meas_dist_min;			
			uint16_t		meas_dist_max;			
		};
		unsigned char		reserved2[256];	
	};
	union {	
        struct  {
            ALRMCFG         max_temp;				
            ALRMCFG         min_temp;				
            ALRMCFG         avg_temp;				
            ALRMCFG         ctr_temp;				
            ALRMCFG         roi_temp[10];			
        }   temp_alarm;								
		uint8_t     reserved3[128];
	};	
}	IRF_SAVEDATA_T;
typedef struct  
{
	BYTE					dynamic_range;			
	int						year;					
	int						month;					
	int						day;					
	int						hour;					
	int						minute;					
	int						second;					
	int						total_frame;			
	IRF_SAVEDATA_T					save_data;		
	BYTE					reserved[460];
}	IRF_IR_DATA_HEADER_T;
typedef struct
{
	BYTE					fhSignature[3];			
	unsigned short			fhSize;					
	BYTE					fhReserved1;			
	BYTE					fhVer;					
	IRF_IMAGE_INFO_T				imageInfo;		
	IRF_TEMP_CORRECTION_PAR_T		tempCorrection;	
	BYTE					dynamicRange;			
	int						fcYear;					
	int						fcMon;					
	int						fcDay;					
	int						fcHour;					
	int						fcMin;					
	int						fcSec;					
	unsigned int			totalFrame;				
	int						fps;					
	BYTE					reserved[968];			
}	IRF_CRD_FILE_HEADER_T;